Address issue with irregular gap between Gifts and Contact Me tabs on 'burger' menue screen; also decrease margin between all 'burger' menue tabs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ a.active {
 
     nav ul li {
         display: block;
-        margin: 25px 0;
+        margin: 15px 0;
         line-height: 30px;
     }
 
@@ -135,7 +135,7 @@ a.active {
 
     nav ul li {
         display: block;
-        margin: 25px 0;
+        margin: 15px 0;
         line-height: 30px;
     }
 
@@ -182,7 +182,7 @@ a.active {
 
     nav ul li {
         display: block;
-        margin: 25px 0;
+        margin: 15px 0;
         line-height: 30px;
     }
 
